# wots

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  xmake.lua
tests/: test.cpp
wots/: task.hpp  wots.cpp  wots.hpp
wots-cli/: main.cpp  main.hpp  task.hpp  wots.cpp  wots.hpp
